--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,8 +34,15 @@ jobs:
 
 
     - name: Get latest tag
-       id:get-tag
-      run: echo ::set-output name=TAG::$(git describe --tags `git rev-list --tags --max-count=1`)
+      id: get_tag
+      run: |
+        latest_tag=$(git describe --tags `git rev-list --tags --max-count=1`)
+        if [ -z "$latest_tag" ]; then
+          echo "No tags found, setting initial version as v1.0.0"
+          echo "v1.0.0"
+        else
+          echo ::set-output name=TAG::$latest_tag
+        fi
 
     - name: Generate next version
       id: next_version
